<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:gravity="center|right"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_weight="0.25"
        android:layout_height="wrap_content"
        android:text="@string/Cero"
        android:textSize="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/botonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:text="@string/boton_reset"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/botonBorrar"
            app:layout_constraintTop_toTopOf="@+id/botonBorrar" />

        <Button
            android:id="@+id/botonPorcentaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:text="@string/boton_percentage"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/botonReset"
            tools:layout_editor_absoluteX="209dp" />

        <Button
            android:id="@+id/botonDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:text="@string/boton_division"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:text="@string/boton_borrar"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:padding="10dp"
        android:textSize="20dp"
        android:textStyle="bold">

        <Button
            android:id="@+id/botonSiete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ligthblue"
            android:text="@string/boton_siete"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonOcho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ligthblue"
            android:text="@string/boton_ocho"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonNueve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ligthblue"
            android:text="@string/boton_nueve"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonMulti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:text="@string/boton_multi"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/botonCuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ligthblue"
            android:text="@string/boton_cuatro"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonCinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ligthblue"
            android:text="@string/boton_cinco"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonSeis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ligthblue"
            android:text="@string/boton_seis"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonMenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:text="@string/boton_resta"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/botonUno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ligthblue"
            android:text="@string/boton_uno"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonDos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ligthblue"
            android:text="@string/boton_dos"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ligthblue"
            android:text="@string/boton_tres"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonMas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:text="@string/boton_suma"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/botonNegativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ligthblue"
            android:text="@string/boton_negativo"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonCero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ligthblue"
            android:text="@string/boton_cero"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonPunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ligthblue"
            android:text="@string/boton_punto"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonIgual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:text="@string/boton_igual"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>